--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,6 +1,6 @@
-.Contact {
+.contact {
     height: 100vh;
-    background-color: chocolate;
+    // background-color: chocolate;
     max-width: 1336px;
     margin: 0 auto;
     padding: 1rem 0;
@@ -9,6 +9,7 @@
     h1 {
         text-align: center;
         font-size: 50px;
+        color: #190482
     }
 
     .icons {
@@ -23,6 +24,10 @@
         padding: 10px;
         flex-wrap: wrap;
 
+        a {
+            color: #000;
+        }
+
         svg {
             height: 5rem;
             width: 5rem;
@@ -36,5 +41,41 @@
 
 
     }
-    
+
+    .contact-form {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+            width: 25rem;
+
+            // height: 15rem;
+            input,
+            textarea {
+                padding: 1rem;
+                // font-weight: 600;
+                border-radius: 5px;
+                border: 1px solid #000;
+                outline: none;
+                resize: none;
+                // color: blue;
+                background: none;
+            }
+
+            button {
+                padding: 1rem;
+                cursor: pointer;
+                border-radius: 5px;
+                border: none;
+                outline: none;
+                font-weight: 600;
+                background-color: aqua;
+            }
+        }
+    }
 }
