--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -36,3 +36,9 @@
         line-height: 1.7;
     }
 }
+
+// $text: #050315;
+// $background: #fbfbfe;
+// $primary: #80ffe8;
+// $secondary: #97d2fb;
+// $accent: #83bcff;
