--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,4 +1,87 @@
 .home {
-    background-color: aqua;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 0;
+
+    .heading {
+        text-align: center;
+        margin-top: 2rem;
+        color: #1986ff;
+        font-size: 3rem;
+        line-height: 2;
+    }
+
+    .card-container {
+        margin-top: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+
+        .first-card {
+            background-color: #e5f1ff;
+            width: 20rem;
+            height: 17rem;
+            padding: 1rem;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            border-radius: 10px;
+
+            h2 {
+                text-align: center;
+                color: #1986ff;
+            }
+
+            p {
+                color: #1986ff
+            }
+        }
+
+        .second-card {
+            background-color: #eaeaf4;
+            width: 28rem;
+            height: 22rem;
+            padding: 1rem;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1rem;
+            border-radius: 10px;
+
+            p {
+                border: 1px solid #2e3092;
+                border-radius: 15px;
+                color: #2e3092;
+                padding: 0.3rem 0.4rem;
+            }
+        }
+    }
+
+    .review-section-container {
+        background-color: #eaeaf4;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .review-section {
+            justify-content: center;
+            gap: 2rem;
+            display: flex;
+            flex-wrap: wrap;
+            width: 50rem;
+            padding: 2rem 0;
+
+            .review {
+                background-color: #ffffff;
+                color: #000;
+                height: 15rem;
+                width: 20rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                padding: 0.5rem;
+                border-radius: 10px;
+            }
+        }
+    }
 }
